--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
 body {
+  background-image: url("https://mir-s3-cdn-cf.behance.net/project_modules/1400/c118519795093.59a68329d15bc.png");
+  background-repeat: no-repeat;
+  background-size: cover;
   font-family: "Roboto", sans-serif;
   font-size: 12px;
-  /* background: linear-gradient(135deg, #396194 0%, #6cc2e6 100%); */
-  background-image: url("https://mir-s3-cdn-cf.behance.net/project_modules/1400/c118519795093.59a68329d15bc.png");
 }
 
 .intro {
@@ -11,30 +12,30 @@ body {
 }
 
 h1 {
-  font-weight: lighter;
   font-size: 50px;
-  text-transform: uppercase;
+  font-weight: lighter;
   text-shadow: 0px 1px rgba(0, 0, 0, 0.26);
+  text-transform: uppercase;
 }
 
 p {
-  margin-top: -5%;
   font-size: 13px;
   font-weight:300;
+  margin-top: -5%;
   text-shadow: 0px 1px rgba(0, 0, 0, 0.26);
 }
 
 button {
-  text-transform: uppercase;
-  font-size: 15px;
-  display: block;
   background-color: rgba(0, 0, 0, 0);
-  width: 200px;
-  height: 50px;
+  border: 2px solid #fff;
   color: #fff;
   cursor: pointer;
-  border: 2px solid #fff;
+  display: block;
+  font-size: 15px;
+  height: 50px;
   margin-top: 5%;
+  text-transform: uppercase;
+  width: 200px;
 }
 
 button:hover {
@@ -50,14 +51,13 @@ button:focus {
 }
 
 canvas {
-  /*background-color: rgba(255, 255, 255, 0.5);*/
-  border: 2px solid #fff;
   background-image: url("../img/background-preview.png");
+  border: 2px solid #fff;
 }
 
 footer {
-  font-size: 10px;
   color: #9A9BA5;
+  font-size: 10px;
 }
 
 footer a{
